--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "server.js",
   "license": "MIT",
   "private": false,
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "dev": "nodemon server.js"
   },
